[gd_scene load_steps=36 format=3 uid="uid://buushqn0boqct"]

[ext_resource type="Script" uid="uid://chv2rs3d26ayf" path="res://scripts/boss/jellyfish.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://o6a7ciu7ogee" path="res://assets/sprites/boss/jellyfish/agua_viva.png" id="2_tnqd7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jpy0s"]
atlas = ExtResource("2_tnqd7")
region = Rect2(0, 198, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlvyc"]
atlas = ExtResource("2_tnqd7")
region = Rect2(469, 198, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp0ae"]
atlas = ExtResource("2_tnqd7")
region = Rect2(0, 66, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6v7m"]
atlas = ExtResource("2_tnqd7")
region = Rect2(67, 66, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gmxq"]
atlas = ExtResource("2_tnqd7")
region = Rect2(134, 66, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lbtr"]
atlas = ExtResource("2_tnqd7")
region = Rect2(201, 66, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5omq"]
atlas = ExtResource("2_tnqd7")
region = Rect2(268, 66, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s58f"]
atlas = ExtResource("2_tnqd7")
region = Rect2(0, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdp8h"]
atlas = ExtResource("2_tnqd7")
region = Rect2(67, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_182o4"]
atlas = ExtResource("2_tnqd7")
region = Rect2(134, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0vei"]
atlas = ExtResource("2_tnqd7")
region = Rect2(201, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v7vu"]
atlas = ExtResource("2_tnqd7")
region = Rect2(268, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lsfc"]
atlas = ExtResource("2_tnqd7")
region = Rect2(335, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5tog"]
atlas = ExtResource("2_tnqd7")
region = Rect2(402, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai32p"]
atlas = ExtResource("2_tnqd7")
region = Rect2(469, 0, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8kbn"]
atlas = ExtResource("2_tnqd7")
region = Rect2(0, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_123pr"]
atlas = ExtResource("2_tnqd7")
region = Rect2(67, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_vscjn"]
atlas = ExtResource("2_tnqd7")
region = Rect2(134, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk0so"]
atlas = ExtResource("2_tnqd7")
region = Rect2(201, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3n4d"]
atlas = ExtResource("2_tnqd7")
region = Rect2(268, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh73e"]
atlas = ExtResource("2_tnqd7")
region = Rect2(335, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqhgy"]
atlas = ExtResource("2_tnqd7")
region = Rect2(402, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqopb"]
atlas = ExtResource("2_tnqd7")
region = Rect2(469, 132, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_enufp"]
atlas = ExtResource("2_tnqd7")
region = Rect2(0, 330, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q2bo"]
atlas = ExtResource("2_tnqd7")
region = Rect2(67, 330, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6rmv"]
atlas = ExtResource("2_tnqd7")
region = Rect2(0, 396, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pdgj"]
atlas = ExtResource("2_tnqd7")
region = Rect2(67, 396, 67, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0vxo"]
atlas = ExtResource("2_tnqd7")
region = Rect2(134, 396, 67, 66)

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpy0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlvyc")
}],
"loop": false,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp0ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6v7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gmxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lbtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5omq")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s58f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdp8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_182o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0vei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v7vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lsfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5tog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai32p")
}],
"loop": true,
"name": &"float",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8kbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_123pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vscjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk0so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3n4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh73e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqhgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqopb")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_enufp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q2bo")
}],
"loop": false,
"name": &"spell-1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6rmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pdgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0vxo")
}],
"loop": false,
"name": &"spell-2",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="2"]
radius = 24.0
height = 60.0

[sub_resource type="CircleShape2D" id="3"]
radius = 32.0

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="JellyfishBoss" type="CharacterBody2D" groups=["boss"]]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 3
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("1")
animation = &"spell-1"
autoplay = "float"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")
debug_color = Color(0.82522434, 0.29203513, 0.688493, 0.41960785)

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
shape = SubResource("3")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = -50.0
theme_override_styles/background = SubResource("5")
theme_override_styles/fill = SubResource("4")
max_value = 200.0
value = 200.0
show_percentage = false
